# magvis

./: .gitmodules  CMakeLists.txt
src/: Biot-Savart.cpp  Biot-Savart.hpp  CMakeLists.txt  Vec3.cpp  Vec3.hpp  Wire.cpp  Wire.hpp  main.cpp
tests/: Biot-Savart_test.cpp  CMakeLists.txt  Vec3_test.cpp  Wire_test.cpp
